# 5th-year

./: README.md
SOTR/Pratica/Projeto/: report_draft.md  s.py
SOTR/Pratica/Projeto/nrf_kit/: CMakeLists.txt
SOTR/Pratica/Projeto/nrf_kit/src/: cab_msg.h  imageGen1.h  imageGenAuto.h  main.c  uart.c
SOTR/Pratica/Projeto/nrf_kit/src/cab/: cab.c  cab.h
SOTR/Pratica/Projeto/nrf_kit/src/imageProcessing/: imageDefinition.h  imageProcessing.c  imageProcessing.h
SOTR/Pratica/XenomaiSampleCode/: Makefile  periodicTaskA1  periodicTaskA2  (+2 more)
VC/Aula2/: Aula_01_ex_01.py  ex_1.3.py  ex_1.4.py  ex_1.4opcional.py  ex_1.5.py  ex_1.6.py
VC/Aula3/: Aula_02_ex_01.py  Aula_02_ex_02.py  Aula_02_ex_03.py  Aula_02_ex_04.py  Aula_02_ex_05.py  Aula_02_ex_06.py  Aula_02_ex_07.py
VC/Aula4/: Aula_03_ex_01.py  Aula_03_ex_02.py  Aula_03_ex_03.py  Aula_03_ex_04.py  Aula_03_ex_05.py  Aula_03_ex_05_optional.py  Aula_03_ex_06.py  Aula_03_ex_06_optional.py
VC/Aula5/: Aula_04_exe_01.py  Aula_04_exe_02.py  Aula_04_exe_03.py  Aula_04_exe_04.py  Aula_04_exe_05.py  Aula_04_exe_06.py  Aula_04_exe_07.py  Aula_04_exe_07_optional.py
VC/Aula6/: camera.npz  camera_params.npz  chessboard_1.py  chessboard_1Optional.py  chessboard_2.py  chessboard_3.py  chessboard_4.py  chessboard_4Optional.py
VC/Aula7/: Stereo_exe_1.py  Stereo_exe_2.py  Stereo_exe_3.py  Stereo_exe_4.py  Stereo_exe_5.py  chessboard.py  ex4_func.py  ex5_func.py  exp_net.py  perguntar_stor  stereoParams.npz
VC/Aula8/: 3DParams.npz  ex5_apagar.py  reconstruction.npz  reconstruction.py  stereoParams.npz  viewcloud_ex3.py  viewcloud_ex4_5.py
(+37 files in other folders)
